boot模块：修改启动脚本